# zyx-00084

./: README.md  _test_encoding_crash.py  audit_report.md  audit_report_json.json  audit_report_v2.md  e2e_report.json  e2e_report.md  e2e_verify.py  pyproject.toml  run_acceptance_tests.ps1  test_bad_config.json  test_regression.py
.invoice_validator/: config.json
.invoice_validator/data/: current_batch.json
.invoice_validator/data/batches/: batch_20260608_095202_7a78e98b.json  batch_20260608_095420_b9a79257.json  batch_20260608_095421_7a343229.json  batch_20260608_101603_bc453735.json
_review_tmp_manual/: custom_supplier_invoices.csv  custom_supplier_invoices.json
_review_tmp_manual/manual_ws/: review_report.json  review_report_md.md  review_report_md2.md
_review_tmp_manual/manual_ws/.invoice_validator/: config.json  supplier_rules.json
_review_tmp_manual/manual_ws/.invoice_validator/data/: current_batch.json
_review_tmp_manual/manual_ws/.invoice_validator/data/batches/: batch_20260608_223209_231be541.json  batch_20260608_223307_22f1175f.json
_review_tmp_manual/manual_ws/samples/: README.txt  invoices_corrupted.json  invoices_sample.csv  invoices_sample.json
invoice_validator/: cli.py  config.py  exporter.py  importer.py  models.py  storage.py  validator.py
invoice_validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
samples/: invoices_missing_cols.csv  invoices_sample.csv  invoices_sample.json
